[gd_scene load_steps=5 format=2]

[ext_resource path="res://Tiles/3.jpg" type="Texture" id=1]
[ext_resource path="res://Scripts/Tile.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/TimeLeft.tscn" type="PackedScene" id=4]

[node name="Tile" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Button" parent="." instance=ExtResource( 3 )]
rect_scale = Vector2( 5, 5 )
strength = 0.25

[node name="TimeLeft" type="Control" parent="." instance=ExtResource( 4 )]
visible = false
modulate = Color( 0, 0.74902, 0, 1 )
margin_left = 0.471954
margin_top = -63.7115
margin_right = 0.471954
margin_bottom = -63.7115
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_out" from="Button" to="." method="_on_Button_button_out"]
[connection signal="button_over" from="Button" to="." method="_on_Button_button_over"]
[connection signal="button_pressed" from="Button" to="." method="_on_Button_button_pressed"]
